fixed user-followers
