# server/src/api/controllers/users/get-user-following.ts
@@ -1,27 +1,51 @@
+import type { ApiResponse } from '@looking-for-group/shared';
 import type { Request, Response } from 'express';
-import prisma from '#config/prisma.ts';
+import { getUserFollowingService } from '#services/users/get-user-following.ts';
 
 //get the user by the username
 export const getUserFollowing = async (req: Request, res: Response): Promise<void> => {
-  const { userIdStr } = req.params;
+  const userId = parseInt(req.params.id);
 
-  const userId = parseInt(userIdStr);
-
-  try {
-    //should be unique
-    const followings = await prisma.userFollowings.findMany({
-      where: { userId },
-      select: {
-        userId: true,
-        followingId: true,
-        followedAt: true,
-      },
-    });
-
-    res.status(200).json(followings);
-  } catch (e) {
-    console.error(`Error in getUserFollowing: ${JSON.stringify(e)}`);
-    res.status(500).json({ message: 'Internal Server Error' });
+  if (isNaN(userId)) {
+    const resBody: ApiResponse = {
+      status: 400,
+      error: 'Invalid user ID',
+      data: null,
+      memetype: 'application/json',
+    };
+    res.status(400).json(resBody);
     return;
   }
+
+  const result = await getUserFollowingService(userId);
+
+  if (result === 'INTERNAL_ERROR') {
+    const resBody: ApiResponse = {
+      status: 500,
+      error: 'Internal Server Error',
+      data: null,
+      memetype: 'application/json',
+    };
+    res.status(500).json(resBody);
+    return;
+  }
+
+  if (result === 'NOT_FOUND') {
+    const resBody: ApiResponse = {
+      status: 404,
+      error: 'Followers for user not found',
+      data: null,
+      memetype: 'application/json',
+    };
+    res.status(404).json(resBody);
+    return;
+  }
+
+  const resBody: ApiResponse<typeof result> = {
+    status: 200,
+    error: null,
+    data: result,
+    memetype: 'application/json',
+  };
+  res.status(200).json(resBody);
 };
